// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> when authenticated renders correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <LoggedInContainer
    token="1324235234"
  >
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        Triplar
      </title>
      <meta
        content="Triplar is a travel organiser. Plan single or multiple stops and see popular attractions for each city along the way."
        name="description"
      />
      <meta
        content="Triplar, travel organiser, travel planner, planner, cities, multiple stops, popular attractions, city, holiday"
        name="keyword"
      />
      <meta
        content="width=device-width"
        name="viewport"
      />
    </HelmetWrapper>
    <div
      className="wrapper"
    >
      <withRouter(Connect(HeaderAuthenticated)) />
      <div
        className="content"
      >
        <Route
          component={[Function]}
          exact={true}
          path="/(|trips)"
        />
        <Route
          component={[Function]}
          exact={true}
          path="/(|trips)"
        />
        <Route
          component={[Function]}
          path="/trips/:id"
        />
        <Route
          component={[Function]}
          path="/trips/:id/edit"
        />
        <Route
          component={[Function]}
          path="/trips/:id/delete"
        />
        <Route
          component={[Function]}
          path="/trips/:id"
        />
        <Route
          component={[Function]}
          path="/trips/:tripId/itinerary/:itineraryId"
        />
        <Route
          component={[Function]}
          path="*/place/:placeId"
        />
      </div>
      <Footer />
    </div>
  </LoggedInContainer>
</Router>
`;

exports[`<App /> when not authenticated renders correctly 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div
    className="wrapper"
  >
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
    >
      <title>
        Triplar
      </title>
      <meta
        content="Triplar is a travel organiser. Plan single or multiple stops and see popular attractions for each city along the way."
        name="description"
      />
      <meta
        content="Triplar, travel organiser, travel planner, planner, cities, multiple stops, popular attractions, city, holiday"
        name="keyword"
      />
      <meta
        content="width=device-width"
        name="viewport"
      />
    </HelmetWrapper>
    <HeaderUnauthenticated />
    <div
      className="content"
    >
      <Switch>
        <Route
          component={[Function]}
          exact={true}
          path="/register"
        />
        <Route
          component={[Function]}
          path="/"
        />
      </Switch>
    </div>
    <Footer />
  </div>
</Router>
`;
